--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "html-to-text": "^8.1.0",
     "qrcode": "^1.5.0",
     "rrule": "^2.6.9",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "svelte-confetti": "^1.2.0"
   },
   "devDependencies": {
     "@size-limit/file": "^7.0.8",
