--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
   "name": "acmcsuf.com",
-  "version": "0.0.1",
+  "version": "3.0.0",
   "private": true,
+  "homepage": "https://acmcsuf.com/",
+  "author": {
+    "name": "EthanThatOneKid",
+    "url": "https://etok.codes/"
+  },
+  "repository": {
+    "url": "https://github.com/EthanThatOneKid/acmcsuf.com.git/"
+  },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "playwright test",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "test:size": "npm i && size-limit",
+    "test:coverage": "vitest run --coverage",
+    "test:browser": "playwright test",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --compiler-warnings \"css-unused-selector:ignore,unused-export-let:error\"",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "host": "npm run all && npm run preview",
+    "all": "npm run format && npm run lint && npm run check && npm t && npm run build"
   },
   "devDependencies": {
     "@playwright/test": "^1.25.0",
@@ -29,7 +42,8 @@
     "svelte-preprocess": "^4.10.6",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vitest": "^0.23.2"
   },
   "type": "module"
 }
