--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-sass": "^7.0.3",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
+    "size-limit": "^8.1.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
     "svelte-preprocess": "^4.10.6",
