--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.25.0",
+    "@size-limit/file": "^8.1.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -37,6 +38,7 @@
     "node-sass": "^7.0.3",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
+    "size-limit": "^8.1.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
     "svelte-preprocess": "^4.10.6",
@@ -45,5 +47,11 @@
     "vite": "^3.1.0",
     "vitest": "^0.23.2"
   },
+  "size-limit": [
+    {
+      "path": "node_modules",
+      "limit": "256 MB"
+    }
+  ],
   "type": "module"
 }
