--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "node-sass": "^7.0.3",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
+    "sass": "^1.54.9",
     "size-limit": "^8.1.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
