SvelteKit release candidate migration: `/1st` page
- Ran `npm i `svelte-confetti`
- Added existing code from #537

--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
       "limit": "256 MB"
     }
   ],
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "svelte-confetti": "^1.2.0"
+  }
 }
