--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@size-limit/file": "^8.1.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/qrcode": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -53,5 +54,8 @@
       "limit": "256 MB"
     }
   ],
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "qrcode": "^1.5.1"
+  }
 }
