--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@size-limit/file": "^8.1.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/html-to-text": "^8.1.1",
+    "@types/rss": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -55,6 +57,8 @@
   ],
   "type": "module",
   "dependencies": {
-    "@js-temporal/polyfill": "^0.4.2"
+    "@js-temporal/polyfill": "^0.4.2",
+    "html-to-text": "^8.2.1",
+    "rss": "^1.2.2"
   }
 }
