--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/EthanThatOneKid/acmcsuf.com.git/"
   },
   "scripts": {
+    "start": "npm run dev",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
@@ -23,7 +24,7 @@
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "host": "npm run all && npm run preview",
-    "all": "npm run lint && npm run format && npm run check && npm t && npm run build"
+    "all": "npm run lint && npm run format && npm run check && npm run build && npm t"
   },
   "devDependencies": {
     "@playwright/test": "^1.25.0",
