Using microsoft/playwright-github-action for Website Check
See: <https://github.com/marketplace/actions/run-playwright-tests#usage>

--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -47,6 +47,7 @@ jobs:
         run: npm run check
 
       - name: Test
+        uses: microsoft/playwright-github-action@v1
         run: npm run test
 
       # info: https://etok.codes/acmcsuf.com/blob/main/CONTRIBUTING.md#npm-bloat
