Squashed commit of the following:
commit ffb717baca5aca45ce66b60cb4dc5c4c8860f99f
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 19:03:43 2022 -0800

    Recreated #570

commit 700ffc8daec7aaaa20a868989b2228789bb23353
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 17:12:28 2022 -0800

    Added error page Playwright test

commit 1698f875eec933274c6bf357fd887165b9d98601
Merge: 3d96e18 3781e15
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 17:06:53 2022 -0800

    Merge branch 'mgr8/about' into mgr8/error

commit 3781e15cd1ccdcd9e8f97c069063d3bfe66636d2
Merge: 5d808c1 42cc73b
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 17:02:25 2022 -0800

    Merge branch 'mig/index' into mgr8/about

commit 42cc73b713a9b32bbb75aa1b017415b8d5f5fddb
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 16:44:30 2022 -0800

    Update check_website.yaml

commit 196d2b695e235bc3b79dd5ede010260b504e83a6
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 16:35:56 2022 -0800

    Update check_website.yaml

commit 5d808c1659e4a2c8ba93ff5476bb0807f85c90a0
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 16:32:54 2022 -0800

    Moved officer data directory

commit 94e25733d731fd199af93ff147c7af9a280fefb0
Merge: 77a2c65 cb3e7dd
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 16:06:42 2022 -0800

    Merge branch 'mig/index' into mgr8/about

commit cb3e7dd294617cfba063c048681d4e8eb728110c
Author: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Mon Sep 19 16:04:56 2022 -0800

    Force comma-dangle for only-multiline

commit 385567f95dcbcdcb466f636b36f66244110e96c5
Author: Ethan Davidson <31261035+EthanThatOneK

--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -46,6 +46,9 @@ jobs:
       - name: Check
         run: npm run check
 
+      - name: npx playwright install
+        run: npx playwright install
+
       - name: Test
         run: npm run test
 
