--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@size-limit/file": "^8.1.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/qrcode": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -56,6 +57,7 @@
   ],
   "type": "module",
   "dependencies": {
+    "qrcode": "^1.5.1",
     "svelte-confetti": "^1.2.0"
   }
 }
