--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@js-temporal/polyfill": "^0.4.2",
     "html-to-text": "^8.2.1",
     "qrcode": "^1.5.1",
+    "rrule": "^2.6.9",
     "rss": "^1.2.2",
     "svelte-confetti": "^1.2.0"
   }
