--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -39,6 +39,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Touch .env
+        run: cp .env.example .env
+
       # checks for lint errors AND format errors
       - name: Lint
         run: npm run lint && git diff --exit-code
