--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/rss": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "discord.js": "^14.4.0",
+    "dotenv": "^16.0.2",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
