--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "qrcode": "^1.5.1",
     "rrule": "^2.6.9",
     "rss": "^1.2.2",
-    "svelte-confetti": "^1.2.0"
+    "svelte-confetti": "^1.2.0",
+    "web-vitals": "^3.0.3"
   }
 }
