Split up tests into multiple test files in `/src/routes/`

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:watch": "vitest",
     "test:size": "npm i && size-limit",
     "test:coverage": "vitest run --coverage",
-    "test:browser": "playwright test /tests",
+    "test:browser": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --compiler-warnings \"css-unused-selector:ignore,unused-export-let:error\"",
     "lint": "eslint . --fix",
     "format": "prettier --write .",
