--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -48,6 +48,10 @@ jobs:
 
       - name: Check
         run: npm run check
+        env:
+          DEBUG_FLAG_ENABLED: true
+          GH_ACCESS_TOKEN: ${{ github.token }}
+          GH_DISCUSSION_CATEGORY_ID: ${{ secrets.GH_DISCUSSION_CATEGORY_ID || 0 }}
 
       - name: npx playwright install
         run: npx playwright install
