--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DEBUG_FLAG_ENABLED=1
 
 GH_DISCUSSION_CATEGORY_ID="DIC_kwDOE7ysSc4CAC0o"
-GH_ACCESS_TOKEN=💖
+GH_ACCESS_TOKEN="💖"
 
 # The Analytics ID is provided when your app builds on Vercel.
 # It is accessed at runtime via svelte.config.js preprocessing.
