--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -42,12 +42,12 @@ jobs:
       - name: Copy .env from .env.example
         run: cp .env.example .env
 
+      - name: Svelte check
+        run: npm run check
+
       # checks for lint errors AND format errors
       - name: Lint
         run: npm run lint && git diff --exit-code
-
-      - name: Check
-        run: npm run check
 
       - name: npx playwright install
         run: npx playwright install
