--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "rrule": "^2.6.9",
     "rss": "^1.2.2",
     "svelte-confetti": "^1.2.0",
+    "svelte-meta-tags": "^2.6.3",
     "web-vitals": "^3.0.3"
   }
 }
