--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@size-limit/file": "^8.1.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/gapi": "^0.0.43",
     "@types/html-to-text": "^8.1.1",
     "@types/qrcode": "^1.5.0",
     "@types/rss": "^0.0.29",
@@ -62,7 +63,9 @@
   ],
   "type": "module",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "@js-temporal/polyfill": "^0.4.1",
+    "googleapis": "^105.0.0",
     "html-to-text": "^8.2.1",
     "qrcode": "^1.5.1",
     "rrule": "^2.6.9",
