--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "qrcode": "^1.5.1",
     "rrule": "^2.7.1",
     "rss": "^1.2.2",
-    "svelte-confetti": "^1.2.0",
-    "web-vitals": "^3.0.4"
+    "svelte-confetti": "^1.2.0"
   }
 }
