Fetch event data from gCal API (#696)
* start on events stuff

* remove ical, implement gcal into events

* Update so we don't get 404

* move helpers to event, move stuff to env, general cleanup

* Add back help func testing 🔄

* move data to JSON, change slug to id 🐌

* lol I change back

* replace googleapis with calendar api, ethan suggestions 😎

* update recurring logic

* js moment 🤡

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ GH_ACCESS_TOKEN="💖"
 # It is accessed at runtime via svelte.config.js preprocessing.
 # If a value is not provided, analytics are ignored.
 VERCEL_ANALYTICS_ID=""
+ 
+GCAL_API_KEY=""
+GCAL_ID=""
