--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   ],
   "type": "module",
   "dependencies": {
+    "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
     "@vercel/analytics": "^0.1.3",
     "html-to-text": "^8.2.1",
