--- a/package.json
+++ b/package.json
@@ -64,11 +64,11 @@
   "dependencies": {
     "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
-    "@vercel/analytics": "^0.1.3",
     "html-to-text": "^8.2.1",
     "qrcode": "^1.5.1",
     "rrule": "^2.7.1",
     "rss": "^1.2.2",
-    "svelte-confetti": "^1.2.0"
+    "svelte-confetti": "^1.2.0",
+    "svelte-meta-tags": "^2.6.3"
   }
 }
