Install esbuild dev dependency

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vitest/coverage-c8": "^0.24.4",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.15.13",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
