--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "@vitest/coverage-c8": "^0.24.4",
+    "devalue": "^4.2.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.3",
     "esbuild": "^0.15.13",
