--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "devDependencies": {
     "@playwright/test": "^1.27.1",
     "@size-limit/file": "^8.1.0",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.84",
+    "@sveltejs/kit": "^1.0.0-next.544",
     "@types/html-to-text": "^8.1.1",
     "@types/qrcode": "^1.5.0",
     "@types/rss": "^0.0.29",
