--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@playwright/test": "^1.27.1",
     "@size-limit/file": "^8.1.0",
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-netlify": "next",
     "@sveltejs/kit": "next",
     "@types/html-to-text": "^8.1.1",
     "@types/qrcode": "^1.5.0",
@@ -37,8 +37,10 @@
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "@vitest/coverage-c8": "^0.24.4",
+    "devalue": "^4.2.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.15.13",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -64,13 +66,11 @@
   "dependencies": {
     "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
-    "@vercel/analytics": "^0.1.3",
     "html-to-text": "^8.2.1",
     "qrcode": "^1.5.1",
     "rrule": "^2.7.1",
     "rss": "^1.2.2",
     "svelte-confetti": "^1.2.0",
-    "svelte-meta-tags": "^2.6.3",
-    "web-vitals": "^3.0.3"
+    "svelte-meta-tags": "^2.6.3"
   }
 }
