--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
     "html-to-text": "^8.2.1",
+    "pomo": "github:ethanthatonekid/pomo#npm",
     "qrcode": "^1.5.1",
     "rrule": "^2.7.1",
     "rss": "^1.2.2",
