Allow year-round Genuary submissions
Resolves <https://github.com/EthanThatOneKid/acmcsuf.com/pull/761#discussion_r1092767686>.

--- a/.github/workflows/update_genuary.yaml
+++ b/.github/workflows/update_genuary.yaml
@@ -5,7 +5,7 @@ on:
   schedule:
     # We want '0 9 * 1 *' in Pacific Time, but GitHub Actions doesn't support timezones.
     # So we use '0 17 * 1 *' in UTC, which is 9 AM in Pacific Time.
-    - cron: '0 17 * 1 *'
+    - cron: '0 17 * * *'
 
 jobs:
   update-genuary:
