--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "qrcode": "^1.5.1",
     "rrule": "^2.7.1",
     "rss": "^1.2.2",
+    "svelte-canvas": "^0.7.1",
     "svelte-confetti": "^1.2.0",
     "web-vitals": "^3.0.4"
   }
