--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
     "@vercel/analytics": "^0.1.3",
+    "cropperjs": "^1.5.13",
     "html-to-text": "^8.2.1",
     "qrcode": "^1.5.1",
     "rrule": "^2.7.1",
