--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
+    "cropperjs": "^1.5.13",
     "html-to-text": "^9.0.4",
     "pomo": "github:EthanThatOneKid/pomo#npm",
     "qrcode": "^1.5.1",
