Add npm run format test
Co-Authored-By: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>

--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -49,6 +49,9 @@ jobs:
       - name: Lint
         run: npm run lint && git diff --exit-code
 
+      - name: Format
+        run: npm run format && git diff --exit-code
+
       - name: npx playwright install
         run: npx playwright install
 
