--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -20,10 +20,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up SvelteKit on Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
@@ -52,11 +52,14 @@ jobs:
       - name: Format
         run: npm run format && git diff --exit-code
 
+      - name: Vitest tests
+        run: npm t
+
       - name: npx playwright install
         run: npx playwright install
 
-      - name: Test
-        run: npm t
+      - name: Playwright tests
+        run: npm run test:browser
 
       # info: https://etok.codes/acmcsuf.com/blob/main/CONTRIBUTING.md#npm-bloat
       - name: Test Dependency Size
