Added new logic
Need to fill out jobs

Co-Authored-By: Ethan Davidson <31261035+EthanThatOneKid@users.noreply.github.com>

--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -63,3 +63,6 @@ jobs:
       # info: https://etok.codes/acmcsuf.com/blob/main/CONTRIBUTING.md#npm-bloat
       - name: Test Dependency Size
         run: npm run test:size
+
+      - name: Test Transform Genuary
+        run: 
