--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -64,5 +64,15 @@ jobs:
       - name: Test Dependency Size
         run: npm run test:size
 
+      - name: Transform Genuary Check Changes
+        id: transform-genuary-check-changes
+        run:
+          if git diff --exit-code --quiet -- scripts/transform-genuary; then
+            echo "updated=0" >> $GITHUB_OUTPUT
+          else
+            echo "updated=1" >> $GITHUB_OUTPUT
+          fi
+
       - name: Test Transform Genuary
-        run: 
+        if: steps.transform-genuary-check-changes.outputs.updated == 1
+        run: node scripts/transform-genuary/test.js
