--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -66,11 +66,10 @@ jobs:
 
       - name: Transform Genuary Check Changes
         id: transform-genuary-check-changes
-        run:
-          if git diff --exit-code --quiet -- scripts/transform-genuary; then
-            echo "updated=0" >> $GITHUB_OUTPUT
+        run: if git diff --exit-code --quiet -- scripts/transform-genuary; then
+          echo "updated=0" >> $GITHUB_OUTPUT
           else
-            echo "updated=1" >> $GITHUB_OUTPUT
+          echo "updated=1" >> $GITHUB_OUTPUT
           fi
 
       - name: Test Transform Genuary
