--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "html-to-text": "^9.0.4",
     "pomo": "github:EthanThatOneKid/pomo#npm",
     "qrcode": "^1.5.1",
