--- a/.github/workflows/update_deps.yaml
+++ b/.github/workflows/update_deps.yaml
@@ -23,3 +23,4 @@ jobs:
           body: |
             - Dependency updates
           branch: update-dependencies
+          author: github-actions <noreply@github.com>
