--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
     "html-to-text": "^9.0.4",
-    "pomo": "github:EthanThatOneKid/pomo#npm",
+    "pomo": "github:ethanthatonekid/pomo#npm",
     "qrcode": "^1.5.1",
     "rrule": "^2.7.2",
     "rss": "^1.2.2",
