--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@size-limit/file": "^8.2.4",
     "@sveltejs/adapter-netlify": "next",
     "@sveltejs/kit": "^1.14.0",
+    "@types/cropperjs": "^1.3.0",
     "@types/html-to-text": "^9.0.0",
     "@types/qrcode": "^1.5.0",
     "@types/rss": "^0.0.30",
