--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@size-limit/file": "^8.2.4",
     "@sveltejs/adapter-netlify": "next",
     "@sveltejs/kit": "^1.14.0",
+    "@types/cropperjs": "^1.3.0",
     "@types/html-to-text": "^9.0.0",
     "@types/qrcode": "^1.5.0",
     "@types/rss": "^0.0.30",
@@ -64,6 +65,7 @@
   "dependencies": {
     "@googleapis/calendar": "^3.0.0",
     "@js-temporal/polyfill": "^0.4.3",
+    "cropperjs": "^1.5.13",
     "html-to-text": "^9.0.4",
     "pomo": "github:ethanthatonekid/pomo#npm",
     "qrcode": "^1.5.1",
