--- a/package.json
+++ b/package.json
@@ -3,11 +3,26 @@
   "description": "Official website of CSUF's ACM club.",
   "version": "5.0.0",
   "private": true,
+  "type": "module",
   "homepage": "https://acmcsuf.com/",
   "author": "EthanThatOneKid (https://etok.codes/)",
   "repository": {
     "url": "git+https://github.com/EthanThatOneKid/acmcsuf.com.git"
   },
+  "bugs": {
+    "url": "https://github.com/EthanThatOneKid/acmcsuf.com/issues"
+  },
+  "main": "svelte.config.js",
+  "keywords": [
+    "svelte"
+  ],
+  "license": "MIT",
+  "size-limit": [
+    {
+      "path": "node_modules",
+      "limit": "256 MB"
+    }
+  ],
   "scripts": {
     "start": "npm run dev",
     "dev": "vite dev",
@@ -25,57 +40,21 @@
     "all": "npm run lint && npm run format && npm run check && npm run build && npm t"
   },
   "devDependencies": {
-    "@playwright/test": "^1.30.0",
-    "@size-limit/file": "^8.2.4",
-    "@sveltejs/adapter-netlify": "next",
+    "@playwright/test": "^1.28.1",
+    "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
-    "@types/cropperjs": "^1.3.0",
-    "@types/html-to-text": "^9.0.0",
-    "@types/qrcode": "^1.5.0",
-    "@types/rss": "^0.0.30",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "@vitest/coverage-c8": "^0.28.5",
-    "devalue": "^4.3.0",
-    "dotenv": "^16.0.3",
-    "esbuild": "^0.17.8",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte": "^2.30.0",
+    "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
-    "sass": "^1.58.1",
-    "size-limit": "^8.2.4",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.3",
-    "svelte-preprocess": "^5.0.3",
-    "tslib": "^2.5.0",
+    "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vitest": "^0.28.5"
-  },
-  "size-limit": [
-    {
-      "path": "node_modules",
-      "limit": "256 MB"
-    }
-  ],
-  "type": "module",
-  "dependencies": {
-    "@googleapis/calendar": "^3.0.0",
-    "@js-temporal/polyfill": "^0.4.3",
-    "cropperjs": "^1.5.13",
-    "html-to-text": "^9.0.4",
-    "pomo": "github:ethanthatonekid/pomo#npm",
-    "qrcode": "^1.5.1",
-    "rrule": "^2.7.2",
-    "rss": "^1.2.2",
-    "svelte-confetti": "^1.2.2",
-    "svelte-meta-tags": "^2.6.5"
-  },
-  "bugs": {
-    "url": "https://github.com/EthanThatOneKid/acmcsuf.com/issues"
-  },
-  "main": "svelte.config.js",
-  "keywords": [],
-  "license": "MIT"
+    "vite": "^4.3.6",
+    "vitest": "^0.32.2"
+  }
 }
