--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.28.1",
+    "@size-limit/file": "^8.2.6",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@types/html-to-text": "^9.0.1",
+    "@types/qrcode": "^1.5.1",
+    "@types/rss": "^0.0.30",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
@@ -50,11 +54,25 @@
     "eslint-plugin-svelte": "^2.30.0",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
+    "sass": "^1.63.6",
+    "size-limit": "^8.2.6",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.3.6",
     "vitest": "^0.32.2"
+  },
+  "dependencies": {
+    "@googleapis/calendar": "^7.0.0",
+    "@js-temporal/polyfill": "^0.4.4",
+    "cropperjs": "^1.5.13",
+    "html-to-text": "^9.0.5",
+    "pomo": "github:ethanthatonekid/pomo#npm",
+    "qrcode": "^1.5.3",
+    "rrule": "^2.7.2",
+    "rss": "^1.2.2",
+    "svelte-confetti": "^1.2.4",
+    "svelte-meta-tags": "^2.8.0"
   }
 }
