--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,9 @@
 {
-  "useTabs": false,
-  "tabWidth": 2,
-  "trailingComma": "es5",
-  "printWidth": 100,
-  "singleQuote": true,
-  "svelteStrictMode": false,
-  "svelteAllowShorthand": true,
-  "bracketSameLine": false,
-  "svelteIndentScriptAndStyle": true,
-  "svelteSortOrder": "scripts-options-markup-styles",
-  "pluginSearchDirs": ["."],
-  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"useTabs": true,
+	"singleQuote": true,
+	"trailingComma": "none",
+	"printWidth": 100,
+	"plugins": ["prettier-plugin-svelte"],
+	"pluginSearchDirs": ["."],
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
