--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.3.6",
+    "vite-plugin-webfont-dl": "^3.7.6",
     "vitest": "^0.32.2"
   },
   "dependencies": {
