--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
+    "typescript-language-server": "^3.3.2",
     "vite": "^4.3.6",
     "vitest": "^0.32.2"
   },
