--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@js-temporal/polyfill": "^0.4.4",
     "cropperjs": "^1.5.13",
     "html-to-text": "^9.0.5",
+    "node-ical": "^0.16.1",
     "pomo": "github:ethanthatonekid/pomo#npm",
     "qrcode": "^1.5.3",
     "rrule": "^2.7.2",
