--- a/.github/workflows/update_genuary.yaml
+++ b/.github/workflows/update_genuary.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Get pins
-        run: |
+        run: | # TODO: Update CEL expression to filter by the current year.
           go run github.com/ethanthatonekid/pins@latest \
             get -o /tmp/pins $GUILD_ID "channel_parent_id == $CHANNEL_ID"
         env:
@@ -28,7 +28,8 @@ jobs:
           year=$(date +%Y)
           echo "year=$year" >> $GITHUB_OUTPUT
 
-          node scripts/transform-genuary/index.js /tmp/pins/*.json \
+          # TODO: Remove $year as an argument once the CEL expression is updated.
+          node scripts/transform-genuary/index.js /tmp/pins/*.json $year \
             > "src/routes/(site)/genuary/$year/data.json"
 
           if git diff --exit-code --quiet; then
