--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@size-limit/file": "^8.2.6",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@types/css": "^0.0.37",
     "@types/html-to-text": "^9.0.1",
     "@types/qrcode": "^1.5.1",
     "@types/rss": "^0.0.30",
@@ -65,6 +66,7 @@
     "@googleapis/calendar": "^7.0.0",
     "@js-temporal/polyfill": "^0.4.4",
     "cropperjs": "^1.5.13",
+    "css": "^3.0.0",
     "html-to-text": "^9.0.5",
     "lc-dailies": "github:acmcsufoss/lc-dailies#npm",
     "pomo": "github:ethanthatonekid/pomo#npm",
