--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "format": "prettier --write .",
     "host": "npm run all && npm run preview",
     "all": "npm run lint && npm run format && npm run check && npm run build && npm t",
-    "generate:colors": "ts-node scripts/generate-colors/index.js"
+    "generate:colors": "node scripts/generate-colors/index.js"
   },
   "devDependencies": {
     "@size-limit/file": "^8.2.6",
