--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@googleapis/calendar": "^7.0.0",
     "@js-temporal/polyfill": "^0.4.4",
     "cropperjs": "^1.5.13",
+    "googleapis": "^134.0.0",
     "html-to-text": "^9.0.5",
     "lc-dailies": "github:acmcsufoss/lc-dailies#npm",
     "pomo": "github:ethanthatonekid/pomo#npm",
