set up svelte-i18n
TODO: Figure out how to test locales in Chrome browsers ( reference: <https://www.aleksandrhovhannisyan.com/blog/changing-locale-in-chrome-with-dev-tools/>).

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "rrule": "^2.7.2",
     "rss": "^1.2.2",
     "svelte-confetti": "^1.2.4",
+    "svelte-i18n": "^4.0.0",
     "svelte-meta-tags": "^2.8.0"
   }
 }
