--- a/.prettierrc
+++ b/.prettierrc
@@ -5,8 +5,14 @@
   "trailingComma": "es5",
   "printWidth": 100,
   "plugins": ["prettier-plugin-svelte"],
-  "pluginSearchDirs": ["."],
-  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ],
   "bracketSameLine": false,
   "svelteStrictMode": false,
   "svelteAllowShorthand": true,
