Upgrade temporal polyfill package

--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
   },
   "dependencies": {
     "@googleapis/calendar": "^9.8.0",
-    "@js-temporal/polyfill": "^0.4.4",
     "cropperjs": "^1.5.13",
     "googleapis": "^146.0.0",
     "html-to-text": "^9.0.5",
@@ -78,6 +77,7 @@
     "rrule": "^2.8.1",
     "rss": "^1.2.2",
     "svelte-confetti": "^2.3.1",
-    "svelte-meta-tags": "^4.2.0"
+    "svelte-meta-tags": "^4.2.0",
+    "temporal-polyfill": "^0.2.5"
   }
 }
