--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
+      id-token: write # Needed for auth with Deno Deploy.
+      contents: read # Needed to clone the repository.
 
     steps:
       - name: Clone repository
@@ -23,19 +23,14 @@ jobs:
         with:
           deno-version: v2.x
 
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-
       - name: Install step
-        run: 'npm ci'
+        run: 'deno install'
 
       - name: Copy .env from .env.example
         run: 'cp .env.example .env'
 
       - name: Build step
-        run: 'npm run build'
+        run: 'deno task build'
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
