--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,19 +18,14 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
-      - name: Install Deno
-        uses: denoland/setup-deno@v2
-        with:
-          deno-version: v2.x
-
       - name: Install step
-        run: 'deno install'
+        run: 'npm install'
 
       - name: Copy .env from .env.example
         run: 'cp .env.example .env'
 
       - name: Build step
-        run: 'deno task build'
+        run: 'npm run build'
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
