--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -14,18 +14,14 @@ jobs:
   website_check:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [22.x]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up SvelteKit on Node.js ${{ matrix.node-version }}
+      - name: Set up SvelteKit on Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version-file: '.nvmrc'
           cache: 'npm'
 
       - name: Cache Dependencies
