--- a/package.json
+++ b/package.json
@@ -44,26 +44,27 @@
     "generate:colors": "node scripts/generate-colors/index.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@size-limit/file": "^8.2.6",
     "@sveltejs/adapter-auto": "^6.1.0",
     "@sveltejs/kit": "^2.37.0",
     "@types/html-to-text": "^9.0.1",
     "@types/qrcode": "^1.5.1",
     "@types/rss": "^0.0.30",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
     "css": "^3.0.0",
-    "eslint": "^8.28.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^3.12.1",
+    "eslint-plugin-svelte": "^3.12.3",
+    "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "sass": "^1.63.6",
     "size-limit": "^8.2.6",
-    "svelte": "^5.38.7",
+    "svelte": "^5.39.2",
     "svelte-check": "^4.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.44.0",
     "vite": "^7.1.4",
     "vitest": "^3.2.4"
   },
