--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -14,7 +14,8 @@ jobs:
   website_check:
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix: [ubuntu-latest, windows-latest, macos-latest]
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: Checkout
