--- a/.github/workflows/check_website.yaml
+++ b/.github/workflows/check_website.yaml
@@ -52,6 +52,7 @@ jobs:
 
       - name: Transform Genuary Check Changes
         id: transform-genuary-check-changes
+        shell: bash
         run: |
           if git diff --exit-code --quiet scripts/transform-genuary; then
             echo "updated=0" >> $GITHUB_OUTPUT;
