--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@flydotio/dockerfile": "^0.7.10",
     "@size-limit/file": "^8.2.6",
     "@sveltejs/adapter-auto": "^6.1.0",
     "@sveltejs/kit": "^2.37.0",
@@ -71,6 +72,7 @@
   "dependencies": {
     "@googleapis/calendar": "^7.0.0",
     "@js-temporal/polyfill": "^0.4.4",
+    "@sveltejs/adapter-node": "^5.3.2",
     "cropperjs": "^1.5.13",
     "googleapis": "^134.0.0",
     "html-to-text": "^9.0.5",
