--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     }
   ],
   "scripts": {
-    "start": "npm run dev",
+    "start": "node build",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
